--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-rangeslider": "^2.2.0",
     "react-redux": "^9.2.0",
     "react-simple-scroll-up": "^0.2.3",
+    "react-slick": "^0.30.3",
     "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
     "swiper": "^11.1.4",
     "wowjs": "^1.1.3"
